--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="col-lg-6 order-lg-12 text-lg-right info mb-5">
                     <h1 class="display-4"><b>yuHacks</b></h1>
-                    <h2>Insert a quote longer than yuHacks.</h2>
+                    <h2 style="font-size: 1.5rem;">By students at York University, for students everywhere.</h2>
                     <span class="event-date">
                         <i class="far fa-calendar icon-small"></i>
                         February 13-14, 2020
@@ -111,13 +111,13 @@
                         Virtual Event
                     </span>
                     <div class="btn-container">
-                        <a href="#" class="btn mr-5">Register as a hacker</a>
+                        <a href="#" class="btn mr-1">Apply as a Hacker</a>
+                        <a href="#" class="btn mr-1">Apply as a Mentor</a>
                         <a href="#" class="btn">Sponsor us</a>
                     </div>
                 </div>
                 <div class="col-lg-6 date">
                     <h1 class="display-4"><b>Save the date</b></h1>
-                    <h2>Text here</h2>
 
                     <div class="container countdown-container mt-3 mb-5">
                         <div class="row">
@@ -165,10 +165,6 @@
                         <a href="https://www.instagram.com/yuhacks/" class="social-media__link mr-2" target="_blank">
                             <i class="fab fa-instagram icon-small"></i>
                         </a>
-                        <a href="https://discord.com/channels/741079547646312570/741327819572903938"
-                            class="social-media__link" target="_blank">
-                            <i class="fab fa-discord icon-small"></i>
-                        </a>
                     </div>
                 </div>
             </div>
@@ -183,15 +179,13 @@
                 <div class="col-md" data-aos="fade-right">
                     <h1 class="mb-3">What's yuHacks</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate
-                        velit esse cillum dolore eu fugiat nulla pariatur.
-                    </p>
-                    <p>
-                        Excepteur sint occaecat cupidatat non proident, sunt
-                        in culpa qui officia deserunt mollit anim id est laborum.
+                        yuHacks is York University’s 24-hour virtual hackathon by students, for students. We spent
+                        months interviewing fellow students to understand how we could best serve them through our
+                        hackathon. The predominant theme was that students wanted a focus on
+                        <b>Professional Development</b> as they prepare to enter a highly competitive modern workforce.
+                        Through yuHacks, we hope to present attendees with the opportunity to better their professional
+                        selves while engaging in all the fun
+                        you’d expect from a hackathon.
                     </p>
                 </div>
                 <div class="col-md pt-6" data-aos="fade-left">
@@ -210,25 +204,28 @@
             </div>
             <div class="row track-card">
                 <div class="col-12">
-                    <div class="mb-4">
-                        <a OnClick="switchClick('track1')"><i id="trackIcon1"
-                                class="fas fa-globe-africa active"></i></a>
-                        <a OnClick="switchClick('track2')"><i id="trackIcon2" class="fas fa-graduation-cap"></i></a>
-                        <a OnClick="switchClick('track3')"> <i id="trackIcon3" class="fas fa-star-of-life"></i></a>
+                    <div class="mb-4" id="icons">
+                        <a class="btn active"><i id="track1" class="fas fa-graduation-cap active"></i></a>
+                        <a class="btn"><i id="track2" class="fab fa-envira"></i></a>
+                        <a class="btn"><i id="track3" class="fas fa-photo-video"></i></a>
+                        <a class="btn"><i id="track4" class="fas fa-globe-africa"></i></a>
+                        <a class="btn"><i id="track5" class="far fa-lightbulb"></i></a>
+                        <a class="btn"><i id="track6" class="fas fa-star-of-life"></i></a>
+                        <a class="btn"><i id="track7" class="fas fa-user-alt"></i></a>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <h3 id="trackTitle">Track Title 1</h3>
+                    <h3 id="trackTitle">Education Challenge</h3>
                     <p id="trackContent">
-                        Track Content 1, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        Tired of Zoom University? This challenge is open to teams who want to rethink education. Whether
+                        tackling the struggles of online education or developing an app that enhances traditional
+                        education, teams will have their work cut out for them with this
+                        track!
+
                     </p>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <img src="dist/images/img3.png">
+                    <img id="trackImage" src="dist/images/Kids_Studying_from_Home-pana_2.svg">
                     <p class="text-right"><small>Illustration by artist.com</small></p>
                 </div>
             </div>
@@ -324,26 +321,78 @@
     <section class="questions" id="faq">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7" data-aos="fade-right">
+                <div class="col-lg-6" data-aos="fade-right">
                     <h2>Frequently Asked Questions</h2>
                     <br>
-                    <h5 class="card-title">Question</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.</p>
-                    <h5 class="card-title">Question</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.</p>
-                    <h5 class="card-title">Question</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.</p>
-                    <h5 class="card-title">Question</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.</p>
+                    <h5 class="card-title">What is a hackathon?</h5>
+                    <p class="card-text">
+                        A hackathon is a design sprint-like event; often, in which computer programmers and others
+                        involved in software development, including graphic designers, interface designers, project
+                        managers, domain experts, and others collaborate intensively on software
+                        projects. At yuHacks, we have made it possible for those without technical skills to still get
+                        in on the fun! Check out our tracks for more information!</p>
+                    <h5 class="card-title">I applied, when will decisions be released?
+                    </h5>
+                    <p class="card-text">All application decisions will be made on a rolling basis! The sooner you
+                        apply, the sooner you’ll hear back!
+                    </p>
+
+
+                    <h5 class="card-title">What platforms will be used on event day?
+                    </h5>
+                    <p class="card-text">Leading up to event week, you’ll receive all important information via email.
+                        Our Discord server will open up at the start of event week. Event day communications will all
+                        take place in the Discord server. Most of our events will be
+                        broadcast live on YouTube.
+                    </p>
+
+                    <h5 class="card-title">Where will yuHacks take place?</h5>
+                    <p class="card-text">yuHacks will be entirely virtual! </p>
+
+                    <h5 class="card-title">I’m interested in sponsoring your event!
+                    </h5>
+                    <p class="card-text">We’d love to talk about how we can work together! Please send an email to
+                        info@yuhacks.com and we’ll be sure to get back to you ASAP.
+                    </p>
                 </div>
-                <div class="col-lg-5 text-center" data-aos="fade-left">
-                    <img src="dist/images/question.png" alt="" class="img-fluid mt-5">
+                <div class="col-lg-6 text-left" data-aos="fade-left">
+                    <br> <br> <br>
+                    <h5 class="card-title">What kind of events will there be?
+                    </h5>
+                    <p class="card-text">Our specific event focus will be professional development. You can expect
+                        several talks from industry experts, recruiters, and other incredibly talented people! You can
+                        also expect several workshops and games to help you enjoy your
+                        time away from hacking.
+                    </p>
+
+                    <h5 class="card-title">How much does it cost to attend yuHacks?
+                    </h5>
+                    <p class="card-text">There will be no cost involved with attending yuHacks.
+                    </p>
+
+                    <h5 class="card-title">What if I’ve never been to a hackathon before?
+                    </h5>
+                    <p class="card-text">If you’ve never done a hackathon before, you’re definitely in the right place
+                        to change that! We have put together a track just for you!
+                    </p>
+                    <h5 class="card-title">How many people can be on a team?
+                    </h5>
+                    <p class="card-text">Teams can be anywhere from 1-4 hackers.
+                    </p>
+
+                    <h5 class="card-title">Who can participate?</h5>
+                    <p class="card-text">Any student from any institution is welcome to attend! Whether you’re in high
+                        school, college, university, or even a coding bootcamp, you are more than welcome to join in on
+                        the fun!</p>
+
+                    <h5 class="card-title">When do applications open?
+                    </h5>
+                    <p class="card-text">Applications will open on January 1st, 2021!
+                    </p>
+
                 </div>
             </div>
+
 
             <div class="text-right">
                 <button id="scrollToTopBtn"> &#8679;</button>
