--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     </p>
                 </div>
                 <div class="col-md pt-6" data-aos="fade-left">
-                    <img src="dist/images/img1.png">
+                    <img src="dist\images\Analytics-pana.svg">
                 </div>
             </div>
         </div>
@@ -203,8 +203,8 @@
                 <h1 class="col">Tracks</h1>
             </div>
             <div class="row track-card">
-                <div class="col-12">
-                    <div class="mb-4" id="icons">
+                <div class="col-12 mb-4 icons-container" id="icons">
+                    <div class="icon-scroll">
                         <a class="btn active"><i id="track1" class="fas fa-graduation-cap active"></i></a>
                         <a class="btn"><i id="track2" class="fab fa-envira"></i></a>
                         <a class="btn"><i id="track3" class="fas fa-photo-video"></i></a>
@@ -214,7 +214,7 @@
                         <a class="btn"><i id="track7" class="fas fa-user-alt"></i></a>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 track-content track-content-text">
                     <h3 id="trackTitle">Education Challenge</h3>
                     <p id="trackContent">
                         Tired of Zoom University? This challenge is open to teams who want to rethink education. Whether
@@ -224,9 +224,8 @@
 
                     </p>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 track-content-image">
                     <img id="trackImage" src="dist/images/Kids_Studying_from_Home-pana_2.svg">
-                    <p class="text-right"><small>Illustration by artist.com</small></p>
                 </div>
             </div>
         </div>
@@ -237,7 +236,6 @@
     <section class="schedule" id="schedule">
         <div class="container">
             <h1 class="display-4"><b>Schedule</b></h1>
-            <h2 class="mb-5">Some brief text about the event</h2>
             <div class="row">
                 <div class="col-lg-6 event-list mb-5 event-list--13">
                     <h3>Feb 13</h3>
@@ -414,11 +412,9 @@
                 <a href="#" class="social-media__link">
                     <i class="fab fa-instagram icon-small"></i>
                 </a>
-                <a href="#" class="social-media__link">
-                    <i class="fab fa-discord icon-small"></i>
-                </a>
             </div>
-            <p>Copyright &copy; yuHacks</p>
+            <p>Copyright &copy; yuHacks | <a href="http://mlh.io/code-of-conduct" style="font-size: 1rem;">Code Of
+                    Conduct</a></p>
         </div>
     </footer>
     <!-- footer end -->
