--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
                         Virtual Event
                     </span>
                     <div class="btn-container">
-                        <a href="#" class="btn mr-1">Apply as a Hacker</a>
-                        <a href="#" class="btn mr-1">Apply as a Mentor</a>
-                        <a href="#" class="btn">Sponsor us</a>
+                        <a href="https://uqvf17p4nst.typeform.com/to/QNOKt3rT" target="_blank" class="btn mr-1">Apply as
+                            a Hacker</a>
+                        <a href="https://forms.gle/3Rq8iv4hNN1nfdnz8" target="_blank" class="btn mr-1">Apply as a
+                            Mentor</a>
+                        <a href="mailto:info@yuhacks.com" target="_blank" class="btn">Sponsor us</a>
                     </div>
                 </div>
                 <div class="col-lg-6 date">
@@ -177,7 +179,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md" data-aos="fade-right">
-                    <h1 class="mb-3">What's yuHacks</h1>
+                    <h1 class="mb-3">About yuHacks</h1>
                     <p>
                         yuHacks is York University’s 24-hour virtual hackathon by students, for students. We spent
                         months interviewing fellow students to understand how we could best serve them through our
