--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </ul>
             </div>
             <a href="https://mlh.io/seasons/2021/events?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2021-season&utm_content=black"
-                class="logo--mlh">
+                class="logo--mlh" target="_blank">
                 <img src="./dist/images/mlh-logo.82d8be29@2x.png" alt="Major League Hacking Badge" loading="lazy">
             </a>
         </div>
@@ -242,10 +242,10 @@
                 <div class="col-lg-6 event-list mb-5 event-list--13">
                     <h3>Feb 13</h3>
                     <div class="event-item">
-                        <span class="event-time">8:00 AM</span>
-                        <span class="event-name">Event Name</span>
+                        <span class="event-time">Comming soon...</span>
+                        <span class="event-name"></span>
                     </div>
-                    <div class="event-item">
+                    <!-- <div class="event-item">
                         <span class="event-time">10:00 AM</span>
                         <span class="event-name">Event Name</span>
                     </div>
@@ -264,16 +264,16 @@
                     <div class="event-item">
                         <span class="event-time">9:30 PM</span>
                         <span class="event-name">Event Name</span>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="col-lg-6 mb-5 event-list event-list--14">
                     <h3>Feb 14</h3>
                     <div class="event-item">
-                        <span class="event-time">8:00 AM</span>
-                        <span class="event-name">Event Name</span>
+                        <span class="event-time">Comming soon...</span>
+                        <span class="event-name"></span>
                     </div>
-                    <div class="event-item">
+                    <!-- <div class="event-item">
                         <span class="event-time">10:00 AM</span>
                         <span class="event-name">Event Name</span>
                     </div>
@@ -284,8 +284,7 @@
                     <div class="event-item">
                         <span class="event-time">5:00 PM</span>
                         <span class="event-name">Event Name</span>
-                    </div>
-                    <img src="./dist/images/blue-car.svg" alt="Blue Car Image" class="blue-car">
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -299,6 +298,9 @@
                 <h1>Our Sponsors</h1>
             </div>
             <div class="d-flex justify-content-center">
+                <span class="mt-5" style="font-size: 3rem;">To Be Annouced</span>
+            </div>
+            <!-- <div class="d-flex justify-content-center">
                 <img src="./dist/images/logo-ibm.jpg" alt="IBM Logo" class="img-fluid logo--ibm"></img>
             </div>
             <div class="row">
@@ -312,7 +314,7 @@
                     <img src="./dist/images/logo-sticker-mule.svg" alt="Sticker Mule Logo"
                         class="img-fluid logo--stickermule">
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Sponsors Section End -->
@@ -408,14 +410,15 @@
 
             <p>Stay Connected</p>
             <div class="icons-container">
-                <a href="#" class="social-media__link">
+                <a href="https://www.linkedin.com/company/yuhacks/" class="social-media__link" target="_blank">
                     <i class="fab fa-linkedin icon-small"></i>
                 </a>
-                <a href="#" class="social-media__link">
+                <a href="https://www.instagram.com/yuhacks/" class="social-media__link" target="_blank">
                     <i class="fab fa-instagram icon-small"></i>
                 </a>
             </div>
-            <p>Copyright &copy; yuHacks | <a href="http://mlh.io/code-of-conduct" style="font-size: 1rem;">Code Of
+            <p>Copyright &copy; yuHacks | <a href="http://mlh.io/code-of-conduct" style="font-size: 1rem;"
+                    target="_blank">Code Of
                     Conduct</a></p>
         </div>
     </footer>
