Fix typo from last depl

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <div class="col-lg-6 event-list mb-5 event-list--13">
                     <h3>Feb 13</h3>
                     <div class="event-item">
-                        <span class="event-time">Comming soon...</span>
+                        <span class="event-time">Coming soon...</span>
                         <span class="event-name"></span>
                     </div>
                     <!-- <div class="event-item">
@@ -270,7 +270,7 @@
                 <div class="col-lg-6 mb-5 event-list event-list--14">
                     <h3>Feb 14</h3>
                     <div class="event-item">
-                        <span class="event-time">Comming soon...</span>
+                        <span class="event-time">Coming soon...</span>
                         <span class="event-name"></span>
                     </div>
                     <!-- <div class="event-item">
